# open-ace

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .implementation-summary.md  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_2026-06-10_to_06-11.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Dockerfile  FEISHU_GROUP_CONFIG.md  FEISHU_USER_CONFIG.md  LICENSE  OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  QWEN.md  README.md  REMOTE_DEPLOY.md  ROADMAP.md  VALIDATION_MATRIX.md  VERSION  alembic.ini  cleanup.py  cli.py  codecov.yml  cookies.txt  docker-compose.multi-user.yml  docker-compose.yml  docker-entrypoint.sh  install.conf.sample  pyproject.toml  pytest.ini  requirements.txt  server.py  test_clean.py  test_issue15_rowclick.py  (+20 more)
.claude/plans/: web-terminal-session-persistence.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-review-reminder.yml  crypto-consistency.yml  (+10 more)
.qwen/: PROJECT_SUMMARY.md  comment.md  comment2.md
app/: __init__.py  gunicorn_worker.py  remote_ws_handler.py  terminal_ws_handler.py  terminal_ws_middleware.py  ws_frame.py
config/: CONFIG_GUIDE.md  config.json.sample  remote_config.json.sample
contrib/: fetch-openclaw.service  fetch-openclaw.timer
cron/: daily_run.sh
docs/: API.md  ARCHITECTURE.md  BACKEND_FRONTEND_MAPPING.html  BACKEND_FRONTEND_MAPPING.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_REPORT_FIXED.md  CONCEPTS.md  DATABASE-ANALYSIS.html  DATABASE-ANALYSIS.md  DATABASE-CONVENTIONS.md  DATA_VERIFICATION_DEEP_REPORT.md  DATA_VERIFICATION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURE_STATUS.html  FEATURE_STATUS.md  FEISHU_CONFIG.md  FRONTEND_AESTHETICS_PLAN.md  FRONTEND_OPTIMIZATION_PLAN.html  FRONTEND_OPTIMIZATION_PLAN.md  INTRO_CN.html  INTRO_CN.md  INTRO_EN.md  NGINX.md  OLD_NEW_VERSION_COMPARISON.html  OLD_NEW_VERSION_COMPARISON.md  PROJECT_ANALYSIS.html  PROJECT_ANALYSIS.md  README.md  REFACTOR_FIX_REPORT.html  REFACTOR_FIX_REPORT.md  REMOTE_WORKSPACE.md  REPOSITORY_SETUP.md  TEST_REPORT_MANAGE.md  UI_TEST_GUIDE.md  UI_UX_ANALYSIS_AND_IMPROVEMENT_SOLUTIONS.md  UI_UX_OPTIMIZATION_PROPOSAL-v2.html  UI_UX_OPTIMIZATION_PROPOSAL-v2.md  UI_UX_OPTIMIZATION_PROPOSAL.md  database-analysis.md  (+11 more)
frontend/: .gitignore  .prettierignore  .prettierrc  IMPLEMENTATION_SUMMARY.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite-plugin-preload.ts  vite.config.ts  vitest.config.ts
k8s/: configmap.yaml  database.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  policies.yaml  service.yaml  storage.yaml
logs/: web_server.err  web_server.out
migrations/: baseline.py  env.py  version_table.py
open_ace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
remote-agent/: __init__.py  agent.py  cli_settings.py  config.py  constants.py  executor.py  install.ps1  install.sh  openace_cli.py  requirements.txt  session_isolation.py  session_sync.py  system_info.py  terminal_menu.py  terminal_relay.py  terminal_server.py  tls_config.py  uninstall.ps1  uninstall.sh  websocket_proxy.py  zcode_app_server.py
schema/: schema-init-postgres.sql  schema-init-sqlite.sql  schema-postgres.sql  schema-sqlite.sql
screenshots/: screenshot_report_20260310_095116.html  screenshot_report_20260310_095841.html  screenshot_report_20260310_103011.html  screenshot_report_20260310_174856.html  test_report_20260312_191923.json  test_report_20260313_103953.json  test_report_20260313_104028.json  test_report_20260313_104915.json  test_report_20260313_105719.json  test_report_20260313_110713.json
scripts/: add_message_indexes.py  ai-token-analyzer.service  analyze_old_version.py  backfill_claude_sessions.py  check_allowlist_impact.py  check_migration_heads.py  check_min_revision.py  check_quota_data.py  check_schema_sync.py  clean_invalid_hostnames.py  clear_frontend_cache.sh  com.ai-token-analyzer.web.plist  com.open-ace.web.plist  compare_old_version.py  compare_zai_usage.py  create_db.py  cutover_alembic_baseline.py  diagnose_session_avg.py  export_encrypted_data.py  fetch_claude.py  fetch_codex.py  fetch_openclaw.py  fetch_openclaw_messages.py  fetch_qwen.py  fetch_zcode.py  fix_quota_data.py  generate_changelog.py  generate_schema.py  import_encrypted_data.py  init_auth_db.py  init_db.py  init_schema.py  install.sh  install_web_service.sh  manage.py  migrate_concepts.py  migrate_messages.py  migrate_to_postgres.py  open-ace.service  openace-cat.sh  (+32 more)
static/: index.html  manifest.json
templates/: index.html  login.html  logout_success.html
tests/: README.md  __init__.py  analyze_new_version.py  analyze_new_version_structure.py  analyze_old_version_structure.py  api_test_audit_actions.py  api_test_audit_filter.py  check_old_version_routes.py  compare_versions.py  compliance_report_fix_verification_report.md  conftest.py  debug_new_version.py  e2e_api_key_cli_settings.py  e2e_audit_thresholds_playwright.py  e2e_context_command.py  e2e_permission_panel_style.py  e2e_remote_chat_quality.py  e2e_remote_default_permission.py  e2e_remote_message.py  e2e_remote_model_hot_switch.py  e2e_remote_model_switch_chat.py  e2e_remote_permission.py  e2e_remote_reconnect.py  e2e_remote_reconnect_ui.py  e2e_remote_session_restore.py  e2e_remote_session_ui.py  e2e_remote_ui_improvements.py  e2e_remote_workspace_full.py  e2e_remote_workspace_playwright.py  e2e_remote_workspace_ui.py  e2e_terminal_quota.py  e2e_terminal_restore.py  e2e_terminal_restore_full.py  e2e_terminal_screen_restore.py  e2e_test_remote_workspace.py  e2e_token_install_command.py  retention_anonymize_fix_verification_report.md  test_audit_actions_sync.py  test_config.py  test_db.py  (+13 more)
web/: README.md
website/: 404.html  docusaurus.config.js  index.html  package.json
(+1649 files in other folders)
